--- a/01_FORMULAIRES_LIFTINGUP/exercices/slider/index.html
+++ b/01_FORMULAIRES_LIFTINGUP/exercices/slider/index.html
@@ -6,7 +6,7 @@
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
-
+    <link rel="stylesheet" type="text/css" href="source/page.css" media="all"/>
   </head>
   <body>
     <div id="root"></div>
@@ -15,57 +15,42 @@
 
 
       function loadJSON(url,callback) {
-
-        var xobj = new XMLHttpRequest();
-        xobj.overrideMimeType("application/json");
-        xobj.open('GET', 'my_data.json', true); // Replace 'my_data' with the path to your file
-        xobj.onreadystatechange = function () {
-              if (xobj.readyState == 4 && xobj.status == "200") {
-                // Required use of an anonymous callback as .open will NOT return a value but simply returns undefined in asynchronous mode
-                callback(xobj.responseText);
-              }
-        };
-        xobj.send(null);
+        fetch('https://raw.githubusercontent.com/playoutprod/2020-3wa-react01/master/01_FORMULAIRES_LIFTINGUP/exercices/slider/data.json')
+        .then(response => {
+            if (!response.ok) {
+                throw new Error("HTTP error " + response.status);
+            }
+            return response.json();
+        })
+        .then(json => {
+           callback(json);
+        })
       }
-
-      // http://localhost:8080
-   fetch('https://raw.githubusercontent.com/playoutprod/2020-3wa-react01/master/01_FORMULAIRES_LIFTINGUP/exercices/slider/data.json')
-   .then(response => {
-
-       if (!response.ok) {
-           throw new Error("HTTP error " + response.status);
-       }
-       return response.json();
-   })
-   .then(json => {
-     console.log(json)
-       this.users = json;
-       //console.log(this.users);
-   })
-   .catch(function (error) {
-       console.log(error)
-   })
-
-
-
-
-
 
 
       class App extends React.Component{
 
         constructor(props){
           super(props);
+          this.data = null;
+          this.state = {
+            dataLoaded : false
+          }
           loadJSON("https://raw.githubusercontent.com/playoutprod/2020-3wa-react01/master/01_FORMULAIRES_LIFTINGUP/exercices/slider/data.json",this.onDataLoaded)
         }
 
         onDataLoaded(data){
-          console.log(data)
+          this.data = data;
+          this.setState({
+            dataLoaded : true
+          })
         }
 
         render(){
           return(
-          <div></div>
+          <div id="slider">
+            {!this.state.dataLoaded && <div id="loader-1"></div>}
+          </div>
           )
         }
       }
