--- a/01_FORMULAIRES_LIFTINGUP/exercices/slider/index.html
+++ b/01_FORMULAIRES_LIFTINGUP/exercices/slider/index.html
@@ -6,28 +6,35 @@
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="https://raw.githack.com/playoutprod/2020-3wa-react01/master/01_FORMULAIRES_LIFTINGUP/exercices/slider/style.css" media="all"/>
+    <link rel="stylesheet" type="text/css" href="https://raw.githack.com/playoutprod/2020-3wa-react01/master/01_FORMULAIRES_LIFTINGUP/exercices/slider/slider.css" media="all"/>
+    <style type="text/css">
+      html,body{
+        margin:0;
+        width:100%;
+        height:100%;
+      }
+      #slider,.layer{
+        position:absolute;
+        width:100%;
+        height:100%;
+        display:flex;
+        flex-direction:column;
+        justify-content:center;
+        opacity:1;
+        transition : opacity 2s ease-out;
+        background-color:#FFF;
+      }
+      .layer.hide{
+        opacity:0;
+      }
+    </style>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="slider"></div>
     <!-- compilation JSX => JS -->
     <script type="text/babel">
 
-      function loadJSON(url,callback) {
-        fetch('https://raw.githubusercontent.com/playoutprod/2020-3wa-react01/master/01_FORMULAIRES_LIFTINGUP/exercices/slider/data.json')
-        .then(response => {
-            if (!response.ok) {
-                throw new Error("HTTP error " + response.status);
-            }
-            return response.json();
-        })
-        .then(json => {
-           callback(json);
-        })
-      }
-
-
-      class App extends React.Component{
+      class Slider extends React.Component{
 
         constructor(props){
           super(props);
@@ -35,7 +42,20 @@
           this.state = {
             dataLoaded : false
           }
-          loadJSON("https://raw.githubusercontent.com/playoutprod/2020-3wa-react01/master/01_FORMULAIRES_LIFTINGUP/exercices/slider/data.json",this.onDataLoaded)
+          this.loadData("https://raw.githubusercontent.com/playoutprod/2020-3wa-react01/master/01_FORMULAIRES_LIFTINGUP/exercices/slider/data.json",this.onDataLoaded)
+        }
+
+        loadData(url,callback) {
+          fetch('https://raw.githubusercontent.com/playoutprod/2020-3wa-react01/master/01_FORMULAIRES_LIFTINGUP/exercices/slider/data.json')
+          .then(response => {
+              if (!response.ok) {
+                  throw new Error("HTTP error " + response.status);
+              }
+              return response.json();
+          })
+          .then(json => {
+             callback(json);
+          })
         }
 
         onDataLoaded = (data) => {
@@ -46,19 +66,31 @@
         }
 
         render(){
-          return(
-          <div id="slider">
-            <div id="loader-1" className="loader"></div>
 
-          </div>
+          return(
+          <React.Fragment>
+            <div className={"layer"+(this.state.dataLoaded ? " hide" : "")}>
+                <div id="loader-1" className="loader"></div>
+            </div>
+            <div className="layer">
+              <ul>
+                {this.data &&
+                  this.data.images.map((image,k)=>(
+                    <li key={k}><img src={`${this.data.path}/${this.data.full_folder}/${image.name}.${this.data.extension}`}/></li>
+                  ))
+                }
+              </ul>
+            </div>
+
+          </React.Fragment>
           )
         }
       }
 
 
      ReactDOM.render(
-         <App/>,
-         document.getElementById("root")
+         <Slider/>,
+         document.getElementById("slider")
      );
 
     </script>
