--- a/01_FORMULAIRES_LIFTINGUP/exercices/slider/index.html
+++ b/01_FORMULAIRES_LIFTINGUP/exercices/slider/index.html
@@ -6,15 +6,61 @@
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="https://raw.githack.com/playoutprod/2020-3wa-react01/master/01_FORMULAIRES_LIFTINGUP/exercices/slider/slider.css" media="all"/>
+    <link rel="stylesheet" type="text/css" href="https://rawcdn.githack.com/playoutprod/2020-3wa-react01/a1c23f1860dd389e0f100c213be74027e2b1b22d/01_FORMULAIRES_LIFTINGUP/exercices/slider/slider.css" media="all"/>
   </head>
   <body>
     <div id="slider"></div>
     <!-- compilation JSX => JS -->
     <script type="text/babel">
 
-      class Slider extends React.Component{
 
+      class Imagelist extends React.Component{
+
+        constructor(props){
+          super(props);
+        }
+
+        composeUrl(imageName,size){
+          return(`${this.props.data.path}${this.props.data[this.props.size+"_folder"]}/${imageName}.${this.props.data.extension}?raw=true`)
+        }
+
+        render(){
+          return(
+            <ul className={this.props.size}>
+              {
+              this.props.data &&
+                this.props.data.images.map((image,k)=>{return(
+                  <li key={k}>
+                    <img loaded={image.loaded ? 1:0} width="400" height="320" src={this.composeUrl(image.name,this.props.size)}/>
+                  </li>
+                )})
+              }
+            </ul>
+          )
+        }
+      }
+
+      class View extends React.Component{
+        render(){
+          return(
+          <div className="view">
+            <Imagelist data={this.props.data} size="full"/>
+          </div>
+          )
+        }
+      }
+
+      class Controls extends React.Component{
+        render(){
+          return(
+          <div className="view">
+            <Imagelist data={this.props.data} size="thumb"/>
+          </div>
+          )
+        }
+      }
+
+      class Slider extends React.Component{
         constructor(props){
           super(props);
           this.data = null;
@@ -42,7 +88,6 @@
             const img = new Image();
             img.src = `${this.data.path}/${this.data.full_folder}/${image.name}.${this.data.extension}?raw=true`;
             img.onload = () => {
-
                 image.loaded=true;
                 this.checkLoad();
             };
@@ -68,15 +113,8 @@
             </div>
 
             <div className="layer content">
-              <div className="view">
-                <ul className="full">
-                  {this.data &&
-                    this.data.images.map((image,k)=>{return(
-                      <li key={k}><img loaded={image.loaded ? 1:0} width="400" height="320" src={`${this.data.path}/${this.data.full_folder}/${image.name}.${this.data.extension}?raw=true`}/></li>
-                    )})
-                  }
-                </ul>
-              </div>
+              <View data={this.data}/>
+              <Controls data={this.data}/>
             </div>
 
           </React.Fragment>
