--- a/01_FORMULAIRES_LIFTINGUP/exercices/slider/1_slider.html
+++ b/01_FORMULAIRES_LIFTINGUP/exercices/slider/1_slider.html
@@ -6,22 +6,7 @@
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="https://rawcdn.githack.com/playoutprod/2020-3wa-react01/a1c23f1860dd389e0f100c213be74027e2b1b22d/01_FORMULAIRES_LIFTINGUP/exercices/slider/slider.css" media="all"/>
-    <style>
-
-      .view,.controls{
-        overflow:scroll;
-      }
-      .view{
-        flex:2;
-      }
-      .controls{
-        flex:1;
-      }
-      li{
-        list-style:none;
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="https://raw.githack.com/playoutprod/2020-3wa-react01/master/01_FORMULAIRES_LIFTINGUP/exercices/slider/slider.css" media="all"/>
   </head>
   <body>
     <div id="slider"></div>
