--- a/01_FORMULAIRES_LIFTINGUP/exercices/slider/2_slider.html
+++ b/01_FORMULAIRES_LIFTINGUP/exercices/slider/2_slider.html
@@ -6,9 +6,9 @@
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="https://raw.githack.com/playoutprod/2020-3wa-react01/master/01_FORMULAIRES_LIFTINGUP/exercices/slider/slider.css" media="all"/>
+    <link rel="stylesheet" type="text/css" href="https://rawcdn.githack.com/playoutprod/2020-3wa-react01/4a500585580f0897e0e95cda1f52280c243cc493/01_FORMULAIRES_LIFTINGUP/exercices/slider/slider.css" media="all"/>
     <style>
-      
+
     </style>
   </head>
   <body>
