--- a/01_FORMULAIRES_LIFTINGUP/exercices/slider/2_slider.html
+++ b/01_FORMULAIRES_LIFTINGUP/exercices/slider/2_slider.html
@@ -7,9 +7,6 @@
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
     <link rel="stylesheet" type="text/css" href="https://rawcdn.githack.com/playoutprod/2020-3wa-react01/4a500585580f0897e0e95cda1f52280c243cc493/01_FORMULAIRES_LIFTINGUP/exercices/slider/slider.css" media="all"/>
-    <style>
-
-    </style>
   </head>
   <body>
     <div id="slider" class="etape2"></div>
@@ -33,12 +30,23 @@
         }
 
         render(){
+
           let jsx = (<ul className={"imagelist "+this.props.size}/>);
           if(this.props.data){
-             jsx = (<ul className={"imagelist "+this.props.size} style={{width:this.state.size[0]*this.props.data.images.length}}>
+
+            let style = {};
+
+            if(this.props.size === "full"){
+              style = {
+                width:this.state.size[0]*this.props.data.images.length,
+                left:-(this.props.current ? this.props.current : 0)*this.state.size[0]
+              }
+            }
+
+             jsx = (<ul className={"imagelist "+this.props.size} style={style}>
               {
                 this.props.data.images.map((image,k)=>{return(
-                  <li key={k}>
+                  <li key={k} className={k == this.props.current ? "active" : ""}>
                     <img loaded={image.loaded ? 1:0} width={this.state.size[0]} height={this.state.size[1]} src={this.composeUrl(image.name,this.props.size)}/>
                   </li>
                 )})
@@ -71,7 +79,7 @@
             <div className="view">
               <Arrows handleClick={this.handleClick}/>
               <div className="container">
-                <Imagelist data={this.props.data} size="full"/>
+                <Imagelist data={this.props.data} size="full" current={this.props.current}/>
               </div>
             </div>
           )
@@ -85,7 +93,7 @@
         render(){
           return(
           <div className="controls">
-            <Imagelist data={this.props.data} size="thumb"/>
+            <Imagelist data={this.props.data} size="thumb" current={this.props.current}/>
           </div>
           )
         }
@@ -174,8 +182,8 @@
                 <Loader onLoad={this.onload} json={jsondata}/>
             </div>
             <div className="layer content">
-              <View data={this.data} onAction ={this.handleSlide}/>
-              <Controls data={this.data} onAction={this.handleSlide}/>
+              <View data={this.data} onAction ={this.handleSlide} current={this.state.current}/>
+              <Controls data={this.data} onAction={this.handleSlide} current={this.state.current}/>
             </div>
           </React.Fragment>
           )
